# repository-service-tuf-worker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  Dockerfile  LICENSE  MAINTAINERS.rst  Makefile  Pipfile  README.md  README.rst  SECURITY_INSIGHTS.yml  alembic.ini  app.py  docker-compose-aws.yml  docker-compose-mysql.yml  docker-compose-otel.yml  docker-compose-redis.yml  docker-compose.yml  entrypoint-dev.sh  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  supervisor-dev.conf  supervisor.conf  tox.ini
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yaml  ci.yml  functional-tests.yml  publish_container.yml  publish_docker_dev.yml  review-approved.yml  scorecard.yml  test_docker_build.yml  update-pre-commit-hooks.yml  update-python-deps.yml
alembic/: env.py
alembic/versions/: 033aed9fa14d_initial_migration.py  1effe827d0cd_initial_db.py  2effe827d0ce_settings_and_locks.py  4b8d450e8360_initial_version.py  f092360adce8_initial_migration.py  fceea57e6a38_initial_migration.py  (+1 more)
docs/: requirements.txt
docs/diagrams/: kaprien-repo-worker-C3.puml  (+1 more)
kaprien_repo_worker/: runner.py
otel_signoz_config/: docker-compose-otel.yml  docker-compose-signoz.yml
repo_worker/: __init__.py  config.py  kaprien.py  repository.py  services.py  worker_settings.py
repository_service_tuf_worker/: __init__.py  __version__.py  _signer.py  celery_broker_ssl.py  interfaces.py  loaders.py  otel_tracer.py  repository.py  signer.py
tuf_repository_service_worker/: __init__.py  interfaces.py  repository.py
(+73 files in other folders)
